# PromptForge

./: .gitignore  Append a guarded hook installer once  Remove any older state_theme imports we might have added earlier  Show SHA256 so you can verify the file that is actually on disk  app.py  debug_launch.py  debug_theme_issue.py  install_runui.ps1  requirements.txt  runui.ps1  runui.py  test_leak.js
v2/: pyproject.toml
v2/docs/: INTEGRATE_GUI_BUTTONS.md  README.md  TASKS_V2.md
v2/samples/: _last_fix_input.fixed.json  bad_channel_a.fixed.json  bad_channel_a.json  bootstrap_payload.json  channel_a_sample.json  last_channel_a.json  payload_apply_freeform_v2.json  payload_fix_linkify_paths.json  payload_patch_runui_installer.json  payload_patch_runui_installer_clean.json  payload_patch_runui_installer_fixed.json  payload_pf_link_and_scenario_fix.json  payload_rufffix_and_clean.json  payload_runui_universal.json  payload_runui_universal_clean.json  payload_self_heal_and_journal.json  payload_v22_config_autoload_and_ui.json  payload_v22_gui_modular.json  payload_v22_gui_rows_and_installer.json  payload_v22_scenarios_and_config.json  pf_run_ui_payload.json  smoke.json  v22_gui_buttons_seed.json
v2/schemas/: channel_a_v1.json
v2/scripts/: apply_payload.ps1  gui.ps1  install_openai.ps1  pf.cmd  pf.ps1  run_ui_here.ps1  scenario_app_selfcheck.ps1  scenario_apply_freeform_paste.ps1  scenario_apply_freeform_paste_clipboard.ps1  scenario_apply_freeform_paste_clipboard_run.ps1  scenario_create_next_version.ps1  scenario_fix_linkify_paths.ps1  scenario_git_publish.ps1  (+14 more)
(+86 files in other folders)
